--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/estilos.css">
@@ -146,12 +147,32 @@
             <div class="content">
                 <h3 class="title">Contact me</h3>
 
-                <form class="form">
+                <div class="contacto">
+                    <div>
+                        <p> 
+                            <a class="telefono" href="#"><i class="ion-ios-telephone-outline" aria-hidden="true"></i></a>
+                        </p>
+
+                        <p class="telefono-parrafo">Telefono: +54 11 5821 2439</p>
+                    </div>
+
+                    <div>
+                        <p class="email-parrafo"> 
+                            <a class="email" href="#"><i class="ion-email-unread" aria-hidden="true"></i></a>
+                        </p>
+
+                        <p class="email-parrafo">Email: designanimation.inc@gmail.com</p>
+                    </div>
+    
+                    
+                </div>
+
+                <!-- <form class="form">
                     <input type="text" name="name" placeholder="name">
                     <input type="email" name="email" placeholder="email">
                     <textarea name="mesagge" placeholder="mesagge"></textarea>
                     <input class="button" type="submit" value="Send">
-                </form>
+                </form> -->
             </div>
         </section>
 
